# STM32H7_FreeRTOS_CMake_Template

./: .gitignore  CMakeLists.txt
CM4/Inc/: stm32h7xx_hal_conf.h
CM7/Inc/: stm32h7xx_hal_conf.h
Common/Src/: system_stm32h7xx.c
